math-core/tests/snapshots/conversion_test__left_right_different_stretch.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\left/\\frac12\\right)"
---
<math>
    <mrow>
        <mo stretchy="true">/</mo>
        <mfrac>
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
