math-core/tests/snapshots/conversion_test__log_in_big.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\bigl(\\log\\bigr) + \\big(\\log\\big)"
---
<math>
    <mo maxsize="1.2em" minsize="1.2em">(</mo>
    <mo lspace="0" rspace="0">log</mo>
    <mo maxsize="1.2em" minsize="1.2em">)</mo>
    <mo>+</mo>
    <mo maxsize="1.2em" minsize="1.2em">(</mo>
    <mo lspace="0.1667em" rspace="0.1667em">log</mo>
    <mo maxsize="1.2em" minsize="1.2em">)</mo>
</math>
