math-core/tests/snapshots/conversion_test__long_number.snap
---
source: math-core/tests/conversion_test.rs
expression: "3{,}453{,}435.3453"
---
<math>
    <mn>3</mn>
    <mo rspace="0">,</mo>
    <mn>453</mn>
    <mo rspace="0">,</mo>
    <mn>435.3453</mn>
</math>
