math-core/tests/snapshots/conversion_test__mathbf_with_digit.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathbf{1234}"
---
<math>
    <mi>𝟏𝟐𝟑𝟒</mi>
</math>
