math-core/tests/snapshots/conversion_test__mathbf_with_digit_dot.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathbf{1234.}"
---
<math>
    <mrow>
        <mi>𝟏𝟐𝟑𝟒</mi>
        <mi>.</mi>
    </mrow>
</math>
