math-core/tests/snapshots/conversion_test__mathcal_vs_mathscr_multi.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathcal{AB}, \\mathscr{AB}"
---
<math>
    <mi>𝒜︀ℬ︀</mi>
    <mo>,</mo>
    <mi>𝒜︁ℬ︁</mi>
</math>
