math-core/tests/snapshots/conversion_test__mathit_no_brackets.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit x"
---
<math>
    <mi>𝑥</mi>
</math>
